--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
   <!DOCTYPE html>
-  <!--Code By Webdevtrick ( https://webdevtrick.com )-->
   <html lang="en" >
   <head>
     <meta charset="UTF-8">
-    <title>Single Page Portfolio | Webdevtrick.com</title>
+    <title>JRoi Acosta  | Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
     <link rel="stylesheet" href="style.css">
@@ -690,7 +689,6 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js'></script>
   <script  src="">
-  // Code By Webdevtrick ( https://webdevtrick.com ) 
   $(document).ready(function(){ 
     $(".scroll").click(function(event){
       event.preventDefault();
