--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link href="https://fonts.googleapis.com/css?family=Staatliches&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
   <style>
-  /* Code By Webdevtrick ( https://webdevtrick.com ) */
   html, body {
       background-color: white;
       color:white;
@@ -19,7 +18,7 @@
       margin: 0;
       padding: 0;
       overflow-x: hidden; 
-  }
+  } 
   .navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:focus, .navbar-inverse .navbar-nav>.active>a:hover {
     background-color: #ed5565;
   }
@@ -479,7 +478,7 @@
       <div id="overlay">
         <div class="title">
           <h1><strong> JROI ACOSTA </strong></h1>
-          <h3 id="qualif"><strong> Web Developer </strong></h3>
+          <h3 id="qualif"><strong>Full-stack Web Developer </strong></h3>
         </div>
         <div class="row text-center">
           <!-- <div class="border contact"><a href="#"><h2 style="color: white;" id="borderText"><strong> CONTACT </strong></a></h2></div> -->
@@ -534,7 +533,7 @@
             <div class="timeline-event-copy">
               <p class="timeline-thumbnail"> June 2019 - December 2019 </p>
               <h5 id="workplace"><a href="#" target="_blank">Freelance</a></h5>
-              <h5 id="jobPos"><strong> Game Developement </strong></h5>
+              <h5 id="jobPos"><strong> Game Developer </strong></h5>
               <p id="jobDesc"> • Develop a game for thesis of my teacher client entitled <strong>"Cell Voyage"</strong>, this game focuses more on science .</p>
             </div>
           </li>
@@ -545,7 +544,7 @@
             <div class="timeline-event-copy">
               <p class="timeline-thumbnail"> January 2020 - March 2020</p>
               <h5 id="workplace"><a href="#" target="_blank">Freelance    </a></h5>
-              <h5 id="jobPos"><strong> Game Development </strong></h5>
+              <h5 id="jobPos"><strong> Game Develor </strong></h5>
               <p id="jobDesc">• A game entitled <strong>"Computer Hardware"</strong> where in this game the user will assemble and disassemble the system unit parts and perform a operating system installation .</p>
             </div>
           </li>
@@ -556,7 +555,7 @@
             <div class="timeline-event-copy">
               <p class="timeline-thumbnail"> 2023 </p>
               <h5 id="workplace"><a href="#" target="_blank">Northwestern University</a></h5>
-              <h5 id="jobPos"><strong> Web Developer </strong></h5>
+              <h5 id="jobPos"><strong>Full-stack Web Developer </strong></h5>
               <p id="jobDesc"> • Developed a Course catalog for the university to let the students the courses offered from Freshmen to Senior Year in college. </p>
             </div>
           </li>
@@ -567,7 +566,7 @@
             <div class="timeline-event-copy">
               <p class="timeline-thumbnail"> 2023 </p>
               <h5 id="workplace"><a href="#" target="_blank">Jeckram Advertisement Marketing  </a></h5>
-              <h5 id="jobPos"><strong> Web Developer </strong></h5>
+              <h5 id="jobPos"><strong>Full-stack Web Developer </strong></h5>
               <p id="jobDesc"> • Developed a E-Learning Management System that offers different courses online. This site has api integration of different payment methods. </p>
             </div>
           </li>
@@ -578,7 +577,7 @@
             <div class="timeline-event-copy">
               <p class="timeline-thumbnail"> July 2020 - Now</p>
               <h5 id="workplace"><a href="#" target="_blank">PGIN</a></h5>
-              <h5 id="jobPos"><strong> Web Developer/IT Specialist </strong></h5>
+              <h5 id="jobPos"><strong>Full-stack Web Developer/IT Specialist </strong></h5>
               <p id="jobDesc"> • Create and modifies existing programs. Develop Hospital Management Information System and Other system for HR Department. </p>
             </div>
           </li>
