--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
               <p class="timeline-thumbnail"> 2023 </p>
               <h5 id="workplace"><a href="#" target="_blank">Northwestern University</a></h5>
               <h5 id="jobPos"><strong>Full-stack Web Developer </strong></h5>
-              <p id="jobDesc"> • Developed a Course catalog for the university to let the students the courses offered from Freshmen to Senior Year in college. </p>
+              <p id="jobDesc"> • Developed a Course catalog for the university this is a list of courses offered from Freshmen to Senior Year in college. </p>
             </div>
           </li>
         </ul>
