--- a/index.html
+++ b/index.html
@@ -510,13 +510,11 @@
       <div class="row text-center">
         <div class="skill">jQuery</div> 
         <div class="skill">Laravel</div>
-        <div class="skill">React</div>
       </div> 
       <h2 class="text-center" id="skills-label"><strong> Databases: </strong></h2>
       <div class="row text-center">
         <div class="skill"> mySQL </div> 
         <div class="skill"> SQL Server </div> 
-        <div class="skill"> MongoDB </div>
         <div class="skill"> SQLite </div>
       </div> 
     </section>
@@ -592,7 +590,7 @@
             <div class="col-md-6">  
               <div class="well">
                 <a class="thumbnail">
-                  <img src="https://lh3.googleusercontent.com/drive-viewer/AK7aPaCuZj7JDUuD88oEbUSluAlruzz7xnQYVcpwt13t1QML2XwSwenq_leMTJWCotD2_5x9TnC2-29o4cE5fAT1q2heDzawaA=s1600" class="project-img">
+                  <img src="/images/cell voyahe.png" class="project-img">
                 </a>
                 <h2 id="projectTitle"><strong>Cell Voyage</strong></h2>
                 <!-- <a href="https://webdevtrick.com/demos/javascript-image-slideshow/" target="_blank" alt="Live Demo"><h2 id="liveDemo"><strong>Live Demo</strong></h2></a>
