--- a/index.html
+++ b/index.html
@@ -649,7 +649,16 @@
                   <h2 id="projectTitle"><strong>Web-based Hospital Information System </strong></h2>
                   <!-- <a href="" target="_blank" alt="Live Demo"><h2 id="liveDemo"><strong>Live Demo</strong></h2></a> -->
                 </div>
-              </div>
+            </div>
+            <div class="col-md-6">
+                <div class="well">
+                  <a class="thumbnail">
+                    <img src="./images/fmrje.png" class="project-img">
+                  </a>
+                  <h2 id="projectTitle"><strong>Filipino Multidisciplinary Research Journal in Education</strong></h2>
+                  <!-- <a href="" target="_blank" alt="Live Demo"><h2 id="liveDemo"><strong>Live Demo</strong></h2></a> -->
+                </div>
+            </div>
         </div>
   
     
