--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
                 <a class="thumbnail">
                   <img src="./images/fmrje.png" class="project-img">
                 </a>
-                <h2 id="projectTitle"><strong>Filipino Multidisciplinary Research Journal in Education</strong></h2>
+                <h2 id="projectTitle"><strong style="font-size: 30px;">Filipino Multidisciplinary Research Journal in Education</strong></h2>
                 <!-- <a href="" target="_blank" alt="Live Demo"><h2 id="liveDemo"><strong>Live Demo</strong></h2></a> -->
               </div>
           </div>
