--- a/index.html
+++ b/index.html
@@ -615,8 +615,8 @@
                 <a class="thumbnail">
                   <img src="./images/thevacamp.png" class="project-img">
                 </a>
-                <h2 id="projectTitle"><strong>THE VaCamp</strong></h2>
-                  <!-- <a href="" target="_blank" alt="Live Demo"><h2 id="liveDemo"><strong>Live Demo</strong></h2></a> -->
+                <h2 id="projectTitle"><strong><a style="color: #212121;" target="_blank" href="https://www.thevacamp.net">The VA Camp</a> </strong></h2>
+                  <!-- <a href="thevacamp.net" target="_blank" alt="Live Demo"><h2 id="liveDemo"><strong>Live Demo</strong></h2></a> -->
               </div>
             </div>
     
@@ -625,8 +625,8 @@
                   <a class="thumbnail">
                     <img src="./images/smw.png" class="project-img">
                   </a>
-                  <h2 id="projectTitle"><strong>SMW Course</strong></h2>
-                  <!-- <a href="" target="_blank" alt="Live Demo"><h2 id="liveDemo"><strong>Live Demo</strong></h2></a> -->
+                  <h2 id="projectTitle"><strong><a style="color: #212121;" target="_blank" href="https://learn.smwcourses.com">SMW Course</a></strong></h2>
+                  <!-- <a href="https://learn.smwcourses.com " target="_blank" alt="Live Demo"><h2 id="liveDemo"><strong>Live Demo</strong></h2></a> -->
                 </div>
               </div>
         </div>
@@ -645,8 +645,8 @@
                 <a class="thumbnail">
                   <img src="./images/fmrje.png" class="project-img">
                 </a>
-                <h2 id="projectTitle"><strong style="font-size: 30px;">Filipino Multidisciplinary Research Journal in Education</strong></h2>
-                <!-- <a href="" target="_blank" alt="Live Demo"><h2 id="liveDemo"><strong>Live Demo</strong></h2></a> -->
+                <h2 id="projectTitle"><strong style="font-size: 30px;"><a style="color: #212121;" target="_blank" href="https://fmrje.gsquaredresearch.com">Filipino Multidisciplinary Research Journal in Education</a></strong></h2>
+                <!-- <a href="https://fmrje.gsquaredresearch.com " target="_blank" alt="Live Demo"><h2 id="liveDemo"><strong>Live Demo</strong></h2></a> -->
               </div>
           </div>
             <div class="col-md-6">
@@ -654,7 +654,7 @@
                   <a class="thumbnail">
                     <img src="./images/grbasmh.png" class="project-img">
                   </a>
-                  <h2 id="projectTitle"><strong>Web-based Hospital Information System </strong></h2>
+                  <h2 id="projectTitle"><strong>Web-based Hospital Information System</strong></h2>
                   <!-- <a href="" target="_blank" alt="Live Demo"><h2 id="liveDemo"><strong>Live Demo</strong></h2></a> -->
                 </div>
             </div>
