--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
   }
   .well {
     min-height: 300px;
+    height: 400px;
   }
   .border {
     border-style: solid;
@@ -594,7 +595,7 @@
                 <a class="thumbnail">
                   <img src="./images/cell_voyage.png" class="project-img">
                 </a>
-                <h2 id="projectTitle"><strong>Cell Voyage</strong></h2>
+                <h2 id="projectTitle"><strong>Cell Voyage <i style="color: red;">(Local)</i></strong></h2>
                 <!-- <a href="" target="_blank" alt="Live Demo"><h2 id="liveDemo"><strong>Live Demo</strong></h2></a> -->
               </div>
             </div>
@@ -604,7 +605,7 @@
                   <a class="thumbnail">
                     <img src="./images/computer_hardware.png" class="project-img">
                   </a>
-                  <h2 id="projectTitle"><strong>Computer Hardware Game</strong></h2>
+                  <h2 id="projectTitle"><strong>Computer Hardware Game <i style="color: red;">(Local)</i></strong></h2>
                   <!-- <a href="" target="_blank" alt="Live Demo"><h2 id="liveDemo"><strong>Live Demo</strong></h2></a> -->
                 </div>
               </div>
@@ -636,7 +637,7 @@
                 <a class="thumbnail">
                   <img src="./images/catalog.png" class="project-img">
                 </a>
-                <h2 id="projectTitle"><strong>Northwestern University Course Catalog</strong></h2>
+                <h2 id="projectTitle"><strong>Northwestern University Course Catalog <i style="color: red;">(Local)</i></strong></h2>
                 <!-- <a href="" target="_blank" alt="Live Demo"><h2 id="liveDemo"><strong>Live Demo</strong></h2></a> -->
               </div>
             </div>
@@ -654,7 +655,7 @@
                   <a class="thumbnail">
                     <img src="./images/grbasmh.png" class="project-img">
                   </a>
-                  <h2 id="projectTitle"><strong>Web-based Hospital Information System</strong></h2>
+                  <h2 id="projectTitle"><strong>Web-based Hospital Information System <i style="color: red;">(Local)</i></strong></h2>
                   <!-- <a href="" target="_blank" alt="Live Demo"><h2 id="liveDemo"><strong>Live Demo</strong></h2></a> -->
                 </div>
             </div>
