--- a/index.html
+++ b/index.html
@@ -589,14 +589,14 @@
       <h1 class="text-center border titles" id="title"><strong> PORTFOLIO </strong></h1>
       <div class="container">
   
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-md-6">  
               <div class="well">
                 <a class="thumbnail">
                   <img src="./images/cell_voyage.png" class="project-img">
                 </a>
                 <h2 id="projectTitle"><strong>Cell Voyage <i style="color: red;">(Local)</i></strong></h2>
-                <!-- <a href="" target="_blank" alt="Live Demo"><h2 id="liveDemo"><strong>Live Demo</strong></h2></a> -->
+                <a href="" target="_blank" alt="Live Demo"><h2 id="liveDemo"><strong>Live Demo</strong></h2></a>
               </div>
             </div>
     
@@ -606,10 +606,10 @@
                     <img src="./images/computer_hardware.png" class="project-img">
                   </a>
                   <h2 id="projectTitle"><strong>Computer Hardware Game <i style="color: red;">(Local)</i></strong></h2>
-                  <!-- <a href="" target="_blank" alt="Live Demo"><h2 id="liveDemo"><strong>Live Demo</strong></h2></a> -->
+                  <a href="" target="_blank" alt="Live Demo"><h2 id="liveDemo"><strong>Live Demo</strong></h2></a>
                 </div>
               </div>
-        </div>
+        </div> -->
         <div class="row">
             <div class="col-md-6">  
               <div class="well">
