--- a/index.html
+++ b/index.html
@@ -576,8 +576,8 @@
             <div class="timeline-event-copy">
               <p class="timeline-thumbnail"> July 2020 - Now</p>
               <h5 id="workplace"><a href="#" target="_blank">PGIN</a></h5>
-              <h5 id="jobPos"><strong>Full-stack Web Developer/IT Specialist </strong></h5>
-              <p id="jobDesc"> • Create and modifies existing programs. Develop Hospital Management Information System and Other system for HR Department. </p>
+              <h5 id="jobPos"><strong>Full-stack Web Developer</strong></h5>
+              <p id="jobDesc"> • Create and modifies existing programs. Develop different modules of Hospital Management Information System and Other system for HR Department. </p>
             </div>
           </li>
         </ul>
@@ -655,7 +655,7 @@
                   <a class="thumbnail">
                     <img src="./images/grbasmh.png" class="project-img">
                   </a>
-                  <h2 id="projectTitle"><strong>Web-based Hospital Information System <i style="color: red;">(Local)</i></strong></h2>
+                  <h2 id="projectTitle"><strong>Hospital Information System (Philhealth Module) <i style="color: red;">(Local)</i></strong></h2>
                   <!-- <a href="" target="_blank" alt="Live Demo"><h2 id="liveDemo"><strong>Live Demo</strong></h2></a> -->
                 </div>
             </div>
