--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Staatliches&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  -->
+    <link rel="stylesheet" 
+href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   </head>
   
   <body data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -219,12 +221,13 @@
   
   <!-- contact -->  
     <section class="contact-section" id="contact">
-      <h1 class="text-center">Conect With Me!</h1>
+      <!-- <h1 class="text-center">Connect With Me!</h1> -->
       <div class="contact-buttons">
         <!-- <a class="btn btn-linkedin btn-lg" href="#" target="_blank" ><i class="fa fa-2x fa-linkedin"></i></a> -->
         <!-- <a class="btn btn-github btn-lg" href="https://github.com/jroiacosta" target="_blank"><i class="fa fa-2x fa-github"></i></a> -->
         <!-- <a class="btn btn-drible btn-lg" href="#" target="_blank" ><i class="fa fa-2x fa-dribbble"></i></a> -->
-        <a class="btn btn-facebook btn-lg" href="https://facebook.com/papajroi" target="_blank"><i class="fa fa-2x fa-facebook-square"></i></a>
+        <a class="btn btn-facebook btn-lg" href="https://facebook.com/papajroi" target="_blank"><i class="fa-brands fa-2x fa-facebook"></i></a>
+        <a class="btn btn-facebook btn-lg" href="https://m.me/papajroi" target="_blank"><i class="fab fa-2x fa-facebook-messenger"></i></a>
       </div> 
     </section> 
     
