--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
           <li><a href="#home" class="scroll"><span class="fa fa-home"></span> Home</a></li>
           <li><a href="#about" class="scroll"><span class="fa fa-user"></span> About </a></li> 
           <li><a href="#experience" class="scroll"><span class="fa fa-space-shuttle"></span> Experience</a></li>
-          <li><a href="#portfolio" class="scroll"><span class="fa fa-picture-o"></span> Portfolio</a></li>
+          <li><a href="#project" class="scroll"><span class="fa-solid fa-image"></span> Project</a></li>
           <li><a href="#contact" class="scroll"><span class="fa fa-envelope"></span> Contact</a></li>
         </ul>
       </div>
@@ -137,8 +137,8 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     </section>
     
   <!-- Projects-->   
-    <section class="portfolios" id="portfolio">
-      <h1 class="text-center border titles" id="title"><strong> PORTFOLIO </strong></h1>
+    <section class="portfolios" id="project">
+      <h1 class="text-center border titles" id="title"><strong> PROJECTS </strong></h1>
       <div class="container">
   
         <!-- <div class="row">
@@ -221,7 +221,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
   
   <!-- contact -->  
     <section class="contact-section" id="contact">
-      <!-- <h1 class="text-center">Connect With Me!</h1> -->
+      <!-- <h3 class="text-center">Contact Me!</h3> -->
       <div class="contact-buttons">
         <!-- <a class="btn btn-linkedin btn-lg" href="#" target="_blank" ><i class="fa fa-2x fa-linkedin"></i></a> -->
         <!-- <a class="btn btn-github btn-lg" href="https://github.com/jroiacosta" target="_blank"><i class="fa fa-2x fa-github"></i></a> -->
