--- a/index.html
+++ b/index.html
@@ -2,8 +2,21 @@
   <html lang="en" >
   <head>
     <meta charset="UTF-8">
-    <title>JRoi Acosta | Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="JRoi | Portfolio" />
+    <meta property="og:url" content="https://jroiacosta.github.io" />
+    <meta property="og:description" content="How We Started The VA Camp was created in April 2021 to help start-up freelancers build and boost their online businesses. Its first live coaching session was held in a small, cramped room with onl…" />
+    <meta property="og:site_name" content="JRoi | Portfolio" />
+    <meta property="og:image" content="./images/cover.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="640" />
+    <meta property="og:image:alt" content="" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="article:publisher" content="https://m.me/papajroi" />
+
+    <title>JRoi Acosta | Portfolio</title>
+
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Staatliches&display=swap" rel="stylesheet">
