--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:locale" content="en_US" />
     <meta property="article:publisher" content="https://m.me/papajroi" />
 
-    <title>JRoi Acosta | Portfolio</title>
+    <title>JRoi | Portfolio</title>
 
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
     <link rel="stylesheet" href="style.css">
