--- a/index.html
+++ b/index.html
@@ -3,17 +3,16 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:type" content="article" />
-    <meta property="og:title" content="JRoi | Portfolio" />
-    <meta property="og:url" content="https://jroiacosta.github.io" />
-    <meta property="og:description" content="How We Started The VA Camp was created in April 2021 to help start-up freelancers build and boost their online businesses. Its first live coaching session was held in a small, cramped room with onl…" />
-    <meta property="og:site_name" content="JRoi | Portfolio" />
-    <meta property="og:image" content="./images/cover.jpg" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="640" />
-    <meta property="og:image:alt" content="" />
-    <meta property="og:locale" content="en_US" />
-    <meta property="article:publisher" content="https://m.me/papajroi" />
+    <meta property="og:site_name" content="JRoi | Portfolio">
+    <meta property="og:title" content="JRoi | Portfolio">
+    <meta property="og:description" content="">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="en">
+    <meta property="og:url" content="https://jroiacosta.github.io/">
+    <meta property="og:image" content="./images/cover.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="To apply all my knowledge and skills in Information Technology industry as I immerse myself to a working environment that would hone my capabilities which will be my tool of becoming a globally competitive and competent individual in the future.">
 
     <title>JRoi | Portfolio</title>
 
