--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:image:height" content="630">
     <meta property="og:image:alt" content="To apply all my knowledge and skills in Information Technology industry as I immerse myself to a working environment that would hone my capabilities which will be my tool of becoming a globally competitive and competent individual in the future.">
 
-    <title>JRoi | Portfolio</title>
+    <title>JRoi Acosta | Portfolio</title>
 
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
     <link rel="stylesheet" href="style.css">
