--- a/index.html
+++ b/index.html
@@ -63,20 +63,28 @@
       <div class="text-center titles border">
         <h1 id="title"><strong> TECHNICAL SKILLS </strong></h1>  
       </div> 
+      <h2 class="text-center" id="skills-label"><strong> Wordpress: </strong></h2> 
+      <div class="row text-center">
+          <div class="skill">Elementor</div>
+          <div class="skill">WooCommerce</div> 
+      </div> 
       <h2 class="text-center" id="skills-label"><strong> Languages: </strong></h2> 
       <div class="row text-center">
           <div class="skill">HTML</div>
           <div class="skill">CSS</div> 
           <div class="skill">JavaScript </div>
           <div class="skill">PHP</div> 
+          <div class="skill">VB.Net</div> 
       </div> 
       <h2 class="text-center" id="skills-label"><strong> Frameworks & Libraries: </strong></h2>
       <div class="row text-center">
+        <div class="skill">Tailwind</div> 
         <div class="skill">Bootstrap</div> 
         <div class="skill">jQuery</div> 
         <div class="skill">Ajax</div> 
         <div class="skill">Livewire</div> 
         <div class="skill">Laravel</div>
+        <div class="skill">Vue</div>
 
 
       </div> 
