--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <meta property="og:image:alt" content="To apply all my knowledge and skills in Information Technology industry as I immerse myself to a working environment that would hone my capabilities which will be my tool of becoming a globally competitive and competent individual in the future.">
 
     <title>JRoi Acosta | Portfolio</title>
-
+    <link rel="icon" href="./images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Staatliches&display=swap" rel="stylesheet">
@@ -47,7 +48,6 @@
           <h3 id="qualif"><strong>Full Stack Web Developer </strong></h3>
         </div>
         <div class="row text-center">
-          <!-- <div class="border contact"><a href="#"><h2 style="color: white;" id="borderText"><strong> CONTACT </strong></a></h2></div> -->
           <div class="border resume"><h2 style="color: white;" id="borderText"><a href="/files/RESUME(J.ACOSTA).pdf" download="RESUME(J.ACOSTA).pdf"><strong> RESUME </strong></a></h2></div>
         </div>
       </div>
@@ -90,7 +90,7 @@
       </div> 
       <h2 class="text-center" id="skills-label"><strong> Databases: </strong></h2>
       <div class="row text-center">
-        <div class="skill"> mySQL </div> 
+        <div class="skill"> MySQL </div> 
         <div class="skill"> SQL Server </div>
         <div class="skill"> Firebase </div>
       </div> 
