--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:site_name" content="JRoi | Portfolio">
     <meta property="og:title" content="JRoi | Portfolio">
-    <meta property="og:description" content="">
+    <meta property="og:description" content="To apply all my knowledge and skills in Information Technology industry as I immerse myself to a working environment that would hone my capabilities which will be my tool of becoming a globally competitive and competent individual in the future.">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="en">
     <meta property="og:url" content="https://jroiacosta.github.io/">
@@ -13,6 +13,7 @@
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:image:alt" content="To apply all my knowledge and skills in Information Technology industry as I immerse myself to a working environment that would hone my capabilities which will be my tool of becoming a globally competitive and competent individual in the future.">
+    <meta name="keywords" content="PHP Laravel developer, WordPress developer, Laravel portfolio, WordPress portfolio, PHP developer, freelance Laravel developer, freelance WordPress developer, custom WordPress themes, custom Laravel development, WordPress plugin developer, Laravel API developer, backend developer, full-stack developer, Laravel and WordPress expert, PHP web developer, professional WordPress designer, responsive web development, eCommerce WordPress developer, Laravel application developer, SEO-friendly WordPress development, custom website development, PHP Laravel projects, WordPress customization, Laravel web applications, API integration developer, PHP freelancer, WordPress designer, modern web development, CMS developer, web application developer">
 
     <title>JRoi Acosta | Portfolio</title>
     <link rel="icon" href="./images/favicon.png" type="image/x-icon">
