--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div id="overlay">
         <div class="title">
           <h1><strong> JROI ACOSTA </strong></h1>
-          <h3 id="qualif"><strong>Full Stack Web Developer </strong></h3>
+          <h3 id="qualif"><strong>Full Stack Web Developer & Wordpress Developer </strong></h3>
         </div>
         <div class="row text-center">
           <div class="border resume"><h2 style="color: white;" id="borderText"><a href="/files/RESUME(J.ACOSTA).pdf" download="RESUME(J.ACOSTA).pdf"><strong> RESUME </strong></a></h2></div>
