--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     
   <!-- small-introduction --> 
   <div class="small-intro">
-    <p id="small-intro"><strong> To apply all my knowledge and skills in Information Technology industry as I immerse myself to a working environment that would hone my capabilities which will be my tool of becoming a globally competitive and competent individual in the future.</strong></p>
+      <p id="small-intro"><strong> I’m a passionate web developer from Ilocos Norte Philippines. I specialize in creating and customizing web pages that are not only visually appealing but also user-friendly. My goal is to help my clients streamline their work and achieve efficiency through well-designed, functional websites. Let’s work together to turn your ideas into reality!</strong></p>
   </div>
   
   <!-- Skilss --> 
