--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <li><a href="#home" class="scroll"><span class="fa fa-home"></span> Home</a></li>
           <li><a href="#about" class="scroll"><span class="fa fa-user"></span> About </a></li> 
           <li><a href="#experience" class="scroll"><span class="fa fa-space-shuttle"></span> Experience</a></li>
-          <li><a href="#project" class="scroll"><span class="fa-solid fa-image"></span> Project</a></li>
+          <li><a href="#project" class="scroll"><span class="fa-solid fa-image"></span> Projects</a></li>
           <li><a href="#contact" class="scroll"><span class="fa fa-envelope"></span> Contact</a></li>
         </ul>
       </div>
